--- a/InfoEmpleados.html
+++ b/InfoEmpleados.html
@@ -1,1 +1,30 @@
+<html>
+  <head>
+  </head>head>
 
+  <body>
+  <form name="empleados" class="formulario" action="informacion.php" method_="POST">
+    <table class="tabla" border="1">
+      <tr>
+        <td>Identificacion_Empleado</td>
+        <td> <input type="tex" name="Identificacion"</td>
+      </tr>
+       <tr>
+         <td> Nombres Apellidos</td>
+          <td> <input type="tex" name="NomApellidos"</td>
+            </tr>
+       <tr>
+         <td>Cargo a Desempeñar</td> 
+          <td> <input type="tex" name="Cargo"</td>
+        </tr>
+         <tr>
+          <td>Salario</td> 
+          <td> <input type="tex" name="Salario"</td>
+        </tr>
+         <tr>  
+           <td> <input type ="submit" values="Enviar Datos" class="boton"> </td>
+         </tr>
+    </table>
+  </form>
+  </body>
+</html>
