--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  </head>head>
+  </head>
 
   <body>
   <form name="empleados" class="formulario" action="informacion.php" method="POST">
